RESOLVED FIXED44136
Crash in DumpRenderTree!notificationListenerProc when running plugins/access-after-page-destroyed.html
https://bugs.webkit.org/show_bug.cgi?id=44136
Summary Crash in DumpRenderTree!notificationListenerProc when running plugins/access-...
Adam Roben (:aroben)
Reported 2010-08-17 16:05:29 PDT
plugins/access-after-page-destroyed.html is crashing on the bots. The crash logs implicate DumpRenderTree!notificationListenerProc (see <http://build.webkit.org/results/Windows%20Release%20(Tests)/r65540%20(2834)/CrashLog_0e08_2010-08-17_15-52-59-764.txt>).
Attachments
Don't assume AccessibleObjectFromEvent succeeds (1.63 KB, patch)
2010-10-01 11:44 PDT, Adam Roben (:aroben)
sam: review+
Adam Roben (:aroben)
Comment 1 2010-08-17 16:10:10 PDT
Adam Roben (:aroben)
Comment 2 2010-08-18 08:29:58 PDT
Looks like the crash is preceded by an assertion in debug builds: <http://build.webkit.org/results/Windows%20Debug%20(Tests)/r65606%20(18248)/CrashLog_0538_2010-08-18_07-01-47-171.txt> The failing assertion is: HRESULT hr = AccessibleObjectFromEvent(hwnd, idObject, idChild, &parentObject, &vChild); ASSERT(SUCCEEDED(hr)); Presumably we crash later because vChild is still null.
Adam Roben (:aroben)
Comment 3 2010-10-01 11:44:40 PDT
Created attachment 69491 [details] Don't assume AccessibleObjectFromEvent succeeds
Adam Roben (:aroben)
Comment 4 2010-10-01 11:57:07 PDT
Jon Honeycutt
Comment 5 2010-10-01 16:22:19 PDT
Do you know which event we're receiving that AccessibleObjectFromEvent fails on?
Jon Honeycutt
Comment 6 2010-10-01 16:33:51 PDT
I think the bug here may be that AccessibilityController::resetToConsistentState() is not unhooking the "all events" hook set in AccessibilityController::addNotificationListener().
Note You need to log in before you can comment on or make changes to this bug.