Don't assume AccessibleObjectFromEvent succeeds

Fixes <http://webkit.org/b/44136> <rdar://problem/8321684> Crash in
DumpRenderTree!notificationListenerProc when running
plugins/access-after-page-destroyed.html

Reviewed by Sam Weinig.

* DumpRenderTree/win/AccessibilityControllerWin.cpp:
(notificationListenerProc): Check both the return value of
AccessibleObjectFromEvent and the object it returns, as MSDN
recommends.

Canonical link: https://commits.webkit.org/59535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68907 268f45cc-cd09-0410-ab3c-d52691b4dbfc